// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BookingForm matches snapshot for create mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
  >
    <div
      class="bg-white rounded-lg p-6 w-full max-w-md mx-4 max-h-[90vh] overflow-y-auto"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <h2
          class="text-xl font-semibold"
        >
          Create New Booking
        </h2>
        <button
          class="text-gray-500 hover:text-gray-700"
        >
          ✕
        </button>
      </div>
      <form
        class="space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Room *
          </label>
          <select
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2025-08-07"
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2025-08-08"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="flex space-x-3 pt-4"
        >
          <button
            class="flex-1 px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Create Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot for edit mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
  >
    <div
      class="bg-white rounded-lg p-6 w-full max-w-md mx-4 max-h-[90vh] overflow-y-auto"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <h2
          class="text-xl font-semibold"
        >
          Edit Booking
        </h2>
        <button
          class="text-gray-500 hover:text-gray-700"
        >
          ✕
        </button>
      </div>
      <form
        class="space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Room *
          </label>
          <select
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2024-01-15"
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2024-01-15"
              type="date"
              value="2024-01-17"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
            max="10"
            min="1"
            type="number"
            value="2"
          />
        </div>
        <div
          class="bg-blue-50 border border-blue-200 rounded-md p-3"
        >
          <p
            class="text-sm text-blue-800"
          >
            <strong>
              Total Price:
            </strong>
             $
            200.00
          </p>
        </div>
        <div
          class="flex space-x-3 pt-4"
        >
          <button
            class="flex-1 px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Update Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot with loading state 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
  >
    <div
      class="bg-white rounded-lg p-6"
    >
      <div
        class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"
      />
      <p
        class="text-center mt-2"
      >
        Loading rooms...
      </p>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot with room selection 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
  >
    <div
      class="bg-white rounded-lg p-6 w-full max-w-md mx-4 max-h-[90vh] overflow-y-auto"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <h2
          class="text-xl font-semibold"
        >
          Create New Booking
        </h2>
        <button
          class="text-gray-500 hover:text-gray-700"
        >
          ✕
        </button>
      </div>
      <form
        class="space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Room *
          </label>
          <select
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2025-08-07"
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2025-08-08"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="bg-blue-50 border border-blue-200 rounded-md p-3"
        >
          <p
            class="text-sm text-blue-800"
          >
            <strong>
              Total Price:
            </strong>
             $
            100.00
          </p>
        </div>
        <div
          class="flex space-x-3 pt-4"
        >
          <button
            class="flex-1 px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Create Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot with validation errors 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50"
  >
    <div
      class="bg-white rounded-lg p-6 w-full max-w-md mx-4 max-h-[90vh] overflow-y-auto"
    >
      <div
        class="flex justify-between items-center mb-4"
      >
        <h2
          class="text-xl font-semibold"
        >
          Create New Booking
        </h2>
        <button
          class="text-gray-500 hover:text-gray-700"
        >
          ✕
        </button>
      </div>
      <form
        class="space-y-4"
      >
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Room *
          </label>
          <select
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2025-08-07"
            />
          </div>
          <div>
            <label
              class="block text-sm font-medium text-gray-700 mb-1"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
              min="2025-08-07"
              type="date"
              value="2025-08-08"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-3 py-2 border rounded-md border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="flex space-x-3 pt-4"
        >
          <button
            class="flex-1 px-4 py-2 border border-gray-300 rounded-md text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed"
            type="submit"
          >
            Create Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
